0.78
- ADD: añadido filtercat_s y cleanast_s, usando streams,
 permitiendo pipes y sin tener que usar archivos temporales.
- SOPORTE: corregidos un montón de fallos y warnings al
 compilar con gcc v7.
0.77
- TIP: para quitar la sequencias ansi al activar dest_debug
 o dest_screen_crc, podemos usar sed:
 reader_network64 example.conf | sed -r "s/\x1B\[([0-9]{1,3}(;[0-9]{1,2})?)?[mGK]//g" | tee file.txt
- BUG: al decodificar cat48 que iba encadenada en el mismo
 paquete udp, solo se decodificaba a localhost el primer
 datarecord, el segundo se perdía (a la función de decodifi-
 car ast48f se enviaban unos índices antiguos del paquete.
- SOPORTE: añadido un dest_debug, para sacar por stderr el 
 paquete que se procesa
0.76
- SOPORTE: añadido dest_file_nodirectory para no crear
 directorios con timestamp, pero si un nombre de fichero
 con fecha.
- NO! SOPORTE: hace rejoin de los grupos mcast cada 90 segundos.
 Esta idea no funciona, no se puede hacer un rejoin sin cerrar
 el socket y perder datos.

0.75c
- BUG: quitado el debug para corregir I048/090
- BUG: reader_network falla al decodificar I048/120 (visto
 decodificando Tanger)

0.75b
- BUG: reader_rrd3 no contempla I048/090 y I001/090
 (modo C) negativos

0.75a
- SOPORTE: desactiva el unset de ftp_proxy para enviar a aemet
- SOPORTE: habilita el continuar un upload abortado de forma
 automática.

0.75
- BUG: el tamano del paquete se tiene en cuenta en el
  calculo del CRC, deberia disminuir los falsos positivos.
- SOPORTE: uso clock_gettime instead of gettimeofday.
- SOPORTE: añadida filtersicsacout
- SOPORTE: añadido enviar versión al hacer ftp
- SOPORTE: añadido hensoldt 2 asterix

0.74
- SOPORTE: añadido un conversor entre GPS y versión asterix
  de ERA.

0.73
- BUG: cuando en un paquete udp había más de un mensaje
  encapsulado y eran de distintas categorías, el segundo
  se tiraba. Esto afectaba especialmente a Montejunto, Foia,
  etc, porque encapsulaban un cat02+cat01...

0.72