@@ -119,12 +119,11 @@ for destarch in $destarchs; do
     gcc $gccopts -o bin/filtercatout${destarch}${arch} src/utils/filtercatout.c $rnopts
     gcc $gccopts -o bin/filtersacsic${destarch}${arch} src/utils/filtersacsic.c $rnopts
     gcc $gccopts -o bin/filtersacsicout${destarch}${arch} src/utils/filtersacsicout.c $rnopts
-exit 0
+    gcc $gccopts -o bin/filtersacsic_s${destarch}${arch} src/utils/filtersacsic_s.c $rnopts
     gcc $gccopts -o bin/joingps${destarch}${arch} src/utils/joingps.c $rnopts
     gcc $gccopts -o bin/memresps${destarch}${arch} src/memresp/memresps.c $rnopts
     gcc $gccopts -o bin/gps2era${destarch}${arch} src/utils/gps2era.c $rnopts
     gcc $gccopts -o bin/hensoldt2ast${destarch}${arch} src/utils/hensoldt2ast.c $rnopts
-
 done
 
 #gcc -Wall -Iinclude/ src/memresp/memresp.c -o bin/memresp -DLINUX
