@@ -3,7 +3,7 @@ reader_network - A package of utilities to record and work with
 multicast radar data in ASTERIX format. (radar as in air navigation
 surveillance).
 
-Copyright (C) 2002-2014 Diego Torres <diego dot torres at gmail dot com>
+Copyright (C) 2002-2020 Diego Torres <diego dot torres at gmail dot com>
 
 This file is part of the reader_network utils.
 
@@ -32,23 +32,26 @@ along with reader_network. If not, see <http://www.gnu.org/licenses/>.
 
 
 float getTS(unsigned char *ptr, int pre, int post, int lendb, unsigned int i) {
-
     float ts = ((ptr[i + pre + lendb + 6]<<16 ) +
-        (ptr[i + pre + lendb + 7] << 8) +
-        (ptr[i + pre + lendb + 8]) ) / 128.0;
-
+	(ptr[i + pre + lendb + 7] << 8) +
+	(ptr[i + pre + lendb + 8]) ) / 128.0;
     return ts;
-
 }
 
 void printDB(unsigned char *ptr, int pre, int post, int lendb, unsigned int i) {
     int j;
 
     printf("cat(%02X) len(%d) pre(%d) post(%d)\n", ptr[i], lendb,  pre, post);
-    for(j=0;j<pre;j++) printf("%02X ", ptr[i+j]); printf("|");
-    for(j=0;j<lendb;j++) printf("%02X ", ptr[i+pre+j]); printf("|");
-    for(j=0;j<post;j++) printf("%02X ", ptr[i+pre+lendb+j]); printf("==\n\n");
-
+    for(j=0;j<pre;j++) 
+	printf("%02X ", ptr[i+j]);
+    printf("|");
+    for(j=0;j<lendb;j++)
+	printf("%02X ", ptr[i+pre+j]);
+    printf("|");
+    for(j=0;j<post;j++)
+	printf("%02X ", ptr[i+pre+lendb+j]);
+    printf("==\n\n");
+    return;
 }
 
 int main(int argc, char *argv[]) {
@@ -60,9 +63,9 @@ int main(int argc, char *argv[]) {
     float ts1 = -1, ts2 = -1, oldts1 = -1, oldts2 = -1, offsetts1 = 0, offsetts2 = 0;
 
     if(argc!=7) {
-        printf("joingps_%s" COPYRIGHT_NOTICE, ARCH, VERSION);
-        printf("joingps_%s in_filename_1.gps in_filename_2.gps headerbytes prebytes postbytes out_filename.gps\n\n", ARCH);
-        exit(EXIT_SUCCESS);
+	printf("joingps_%s" COPYRIGHT_NOTICE, ARCH, VERSION);
+	printf("joingps_%s in_filename_1.gps in_filename_2.gps headerbytes prebytes postbytes out_filename.gps\n\n", ARCH);
+	exit(EXIT_SUCCESS);
     }
 
     header = atoi(argv[3]);
@@ -92,10 +95,10 @@ int main(int argc, char *argv[]) {
     }
 
     if (filesize1 < (header + pre + post + 3)) {
-        printf("error input file 1 size error\n"); exit(1);
+	printf("error input file 1 size error\n"); exit(1);
     }
     if (filesize2 < (header + pre + post + 3)) {
-        printf("error input file 2 size error\n"); exit(1);
+	printf("error input file 2 size error\n"); exit(1);
     }
 
     if ( (ptr1 = (unsigned char *) malloc (filesize1)) == NULL ) {
@@ -113,81 +116,75 @@ int main(int argc, char *argv[]) {
     }
 
     if (write(fdout, ptr1, header) != header) {
-        printf("error write\n"); exit(1);
+	printf("error write\n"); exit(1);
     }
 
     i += header;
     j += header;
-    
+
     lendb1 = -1; lendb2 = -1;
     while (i<filesize1 && j<filesize2) {
-        if (lendb1==-1) {
-            lendb1 = (ptr1[i+pre+1]<<8) + ptr1[i+pre+2];
-            oldts1 = ts1;
-            ts1 = getTS(ptr1, pre, post, lendb1, i) + offsetts1;
-            if (abs(ts1-oldts1) > 80000) {
-                //printf("ADDING offsetts1\n");
-                offsetts1 += 86400;
-                ts1 += offsetts1;
-            }
-        }
-        
-        if (lendb2==-1) {
-            lendb2 = (ptr2[j+pre+1]<<8) + ptr2[j+pre+2];
-            oldts2 = ts2;
-            ts2 = getTS(ptr2, pre, post, lendb2, j) + offsetts2;
-            if (abs(ts2-oldts2) > 80000) {
-                //printf("ADDING offsetts2\n");
-                offsetts2 += 86400;
-                ts2 += offsetts2;
-            }
-        }
+	if (lendb1==-1) {
+	    lendb1 = (ptr1[i+pre+1]<<8) + ptr1[i+pre+2];
+	    oldts1 = ts1;
+	    ts1 = getTS(ptr1, pre, post, lendb1, i) + offsetts1;
+	    if (abs(ts1-oldts1) > 80000) {
+		//printf("ADDING offsetts1\n");
+		offsetts1 += 86400;
+		ts1 += offsetts1;
+	    }
+	}
 
-        //printDB(ptr1, pre, post, lendb1, i);
-        //printDB(ptr2, pre, post, lendb2, j);
-        //printf("%3.2f %3.2f\n", ts1, ts2);
+	if (lendb2==-1) {
+	    lendb2 = (ptr2[j+pre+1]<<8) + ptr2[j+pre+2];
+	    oldts2 = ts2;
+	    ts2 = getTS(ptr2, pre, post, lendb2, j) + offsetts2;
+	    if (abs(ts2-oldts2) > 80000) {
+		//printf("ADDING offsetts2\n");
+		offsetts2 += 86400;
+		ts2 += offsetts2;
+	    }
+	}
 
-        if (ts1<ts2) {
-            if (write(fdout, ptr1 + i, lendb1+pre+post) != lendb1+pre+post) {
-                printf("error write from file 1\n"); exit(1);
-            }
-            i += pre + post + lendb1;
-            lendb1=-1;
-            //printf("·");
-        } else {
-            if (write(fdout, ptr2 + j, lendb2+pre+post) != lendb2+pre+post) {
-                printf("error write from file 2\n"); exit(1);
-            }
-            j += pre + post + lendb2;
-            lendb2=-1;
-            //printf("+");
-        }
-    
+	//printDB(ptr1, pre, post, lendb1, i);
+	//printDB(ptr2, pre, post, lendb2, j);
+	//printf("%3.2f %3.2f\n", ts1, ts2);
+
+	if (ts1<ts2) {
+	    if (write(fdout, ptr1 + i, lendb1+pre+post) != lendb1+pre+post) {
+		printf("error write from file 1\n"); exit(1);
+	    }
+	    i += pre + post + lendb1;
+	    lendb1=-1;
+	    //printf("·");
+	} else {
+	    if (write(fdout, ptr2 + j, lendb2+pre+post) != lendb2+pre+post) {
+		printf("error write from file 2\n"); exit(1);
+	    }
+	    j += pre + post + lendb2;
+	    lendb2=-1;
+	    //printf("+");
+	}
     }
-    
+
     while (i<filesize1) {
-        lendb1 = (ptr1[i+pre+1]<<8) + ptr1[i+pre+2];
-        if (write(fdout, ptr1 + i, lendb1+pre+post) != lendb1+pre+post) {
-            printf("error write 1\n"); exit(1);
-        }
-        i += pre + post + lendb1;
+	lendb1 = (ptr1[i+pre+1]<<8) + ptr1[i+pre+2];
+	if (write(fdout, ptr1 + i, lendb1+pre+post) != lendb1+pre+post) {
+	    printf("error write 1\n"); exit(1);
+	}
+	i += pre + post + lendb1;
     }
 
     while (j<filesize2) {
-        lendb2 = (ptr2[j+pre+1]<<8) + ptr2[j+pre+2];
-        if (write(fdout, ptr2 + j, lendb2+pre+post) != lendb2+pre+post) {
-            printf("error write 2\n"); exit(1);
-        }
-        j += pre + post + lendb2;
+	lendb2 = (ptr2[j+pre+1]<<8) + ptr2[j+pre+2];
+	if (write(fdout, ptr2 + j, lendb2+pre+post) != lendb2+pre+post) {
+	    printf("error write 2\n"); exit(1);
+	}
+	j += pre + post + lendb2;
     }
-    
+
     /*
-    
-    
-    
-    
-    
-    
+
     while( i<filesize ) {
         int oldi = i;
         int match = 0;
@@ -219,7 +216,7 @@ int main(int argc, char *argv[]) {
 	i += lendb;
     }
     */
-    
+
     free(ptr1);
     free(ptr2);
     if (close(fdout) == -1) {
